--- a/assest/css/menu.css
+++ b/assest/css/menu.css
@@ -8,14 +8,15 @@ body {
   padding: 0;
   font-family: sans-serif;
   display: flex;
-  background-image: linear-gradient(
+  /* background-image: linear-gradient(
     to right bottom,
     #ffffff,
     #c8c9d1,
     #9296a6,
     #5c667c,
     #243b55
-  );
+  ); */
+  background-color: #a1acbd !important;
 }
 
 .hero {
@@ -31,32 +32,113 @@ section {
   padding: 80px 0;
 }
 
-.menu-container {
-  height: 100vh;
-  width: 200px;
-  /* Adjust the width as needed */
-  background-color: #f4f4f4;
-  position: fixed;
-  left: 0;
-  top: 0;
-  overflow-x: hidden;
-  padding-top: 20px;
+/*--------------------------------------------------------------
+# Menu Section
+--------------------------------------------------------------*/
+
+.menu .nav-tabs {
+  border: 0;
+  padding-top: 30px;
+  /* position: fixed; */
 }
 
-.menu-container a {
-  text-decoration: none;
+.nav-item {
+  margin-bottom: 10px;
 }
 
-.menu-item {
-  padding: 15px;
-  text-align: center;
-  text-decoration: none;
+.menu .nav-link {
+  margin: 0 10px;
+  padding: 10px 5px;
+  transition: 0.3s;
+  color: #532f3b;
+  border-radius: 0;
+  cursor: pointer;
+  height: 100%;
+  border: 0;
+  border-bottom: 2px solid #b6b6bf;
+}
+
+@media (max-width: 575px) {
+  .menu .nav-link {
+    margin: 0 10px;
+    padding: 10px 0;
+  }
+}
+
+.menu .nav-link i {
+  padding-right: 15px;
+  font-size: 48px;
+}
+
+.menu .nav-link h4 {
   font-size: 18px;
-  color: #333;
-  display: block;
-  transition: background-color 0.3s;
+  font-weight: 400;
+  margin: 0;
+  font-family: var(--font-secondary);
 }
 
-.menu-item:hover {
-  background-color: #ddd;
+@media (max-width: 575px) {
+  .menu .nav-link h4 {
+    font-size: 16px;
+  }
+}
+
+.menu .nav-link:hover {
+  color: #f0f0f0;
+  width: 85px;
+}
+
+.menu .nav-link.active {
+  color: #532f3b !important;
+  border: none !important;
+  background-color: #daf3ff !important;
+  width: 85px;
+}
+
+.menu .tab-content .tab-header {
+  padding: 30px 0;
+}
+
+.menu .tab-content .tab-header p {
+  font-size: 14px;
+  text-transform: uppercase;
+  color: #fcfcd4;
+  margin-bottom: 0;
+}
+
+.menu .tab-content .tab-header h3 {
+  font-size: 36px;
+  font-weight: 600;
+  color: #fcfcd4;
+}
+
+.menu .tab-content .menu-item {
+  -moz-text-align-last: center;
+  text-align-last: center;
+}
+
+.menu .tab-content .menu-item .menu-img {
+  padding: 0 60px;
+  margin-bottom: 15px;
+}
+
+.menu .tab-content .menu-item h4 {
+  font-size: 22px;
+  font-weight: 500;
+  color: #daf3ff;
+  font-family: var(--font-secondary);
+  font-weight: 30px;
+  margin-bottom: 5px;
+}
+
+.menu .tab-content .menu-item .ingredients {
+  font-family: var(--font-secondary);
+  color: #6d7888;
+  margin-bottom: 5px;
+}
+
+.menu .tab-content .menu-item .price {
+  font-size: 24px;
+  font-weight: 700;
+  color: #fcfcd4;
 }
