--- a/assest/css/navbar.css
+++ b/assest/css/navbar.css
@@ -1,23 +1,3 @@
-html {
-  height: 100%;
-}
-
-body {
-  box-sizing: border-box;
-  margin: 0;
-  padding: 0;
-  font-family: sans-serif;
-  /* background-image: linear-gradient(
-    to right bottom,
-    #ffffff,
-    #c8c9d1,
-    #9296a6,
-    #5c667c,
-    #243b55
-  ); */
-  background-color: #a1acbd !important;
-}
-
 /*--------------------------------------------------------------
     # Header
     --------------------------------------------------------------*/
@@ -34,11 +14,29 @@ body {
 }
 
 #header.header-scrolled svg {
-  fill: white;
+  fill: #daf3ff;
 }
 
-#header.header-scrolled h1 a {
-  fill: white;
+#header.header-scrolled .nav-link {
+  color: #a1acbd;
+}
+
+#header.header-scrolled .nav-link:hover {
+  color: #fcfcd4;
+}
+
+#header.header-scrolled .getstarted {
+  color: #daf3ff !important;
+  border-color: #daf3ff;
+  background-color: inherit;
+}
+
+#header.header-scrolled .getstarted:hover {
+  background-color: #532f3b;
+}
+
+#header.header-scrolled .after-scroll {
+  color: #daf3ff;
 }
 
 #header .logo {
@@ -66,8 +64,8 @@ body {
 }
 
 /*--------------------------------------------------------------
-  # Navigation Menu
-  --------------------------------------------------------------*/
+      # Navigation Menu
+      --------------------------------------------------------------*/
 
 .navbar {
   padding: 0;
@@ -262,58 +260,4 @@ body {
   position: relative;
   min-height: 60vh;
   padding: 160px 0 60px 0;
-}
-
-section {
-  overflow: hidden;
-  padding: 80px 0;
-}
-
-.section-header {
-  text-align: center;
-  padding-bottom: 30px;
-}
-
-.section-header h2 {
-  font-size: 13px;
-  letter-spacing: 1px;
-  font-weight: 400;
-  margin: 0;
-  padding: 0;
-  color: #7f7f90;
-  text-transform: uppercase;
-  /*font-family: var(--font-default);*/
-}
-
-.section-header p {
-  margin: 0;
-  font-size: 48px;
-  font-weight: 400;
-  /*font-family: var(--font-primary);*/
-}
-
-.section-header p span {
-  color: #532f3b;
-}
-
-.btn-book-a-table,
-.btn-book-a-table:focus {
-  font-size: 14px;
-  color: #865d6a;
-  border: 2px solid #532f3b;
-  padding: 8px 20px;
-  /* margin-left: 30px; */
-  border-radius: 50px;
-  transition: 0.3s;
-  text-decoration: none;
-}
-
-.btn-book-a-table:hover,
-.btn-book-a-table:focus:hover {
-  color: #fff;
-  background: #532f3b;
-}
-
-.second-title {
-  margin-left: 5px;
 }
